# spm1d

./: README.md  pyproject.toml
.github/workflows/: master-push-pypi.yml
src/spm1d/: __init__.py  _plot.py  cfg.py  plot.py  utilold.py
src/spm1d/_argparse/: exp.py  prs.py
src/spm1d/data/: __init__.py  _all.py  _base.py  _iter.py
src/spm1d/geom/: __init__.py  label.py  smoothness.py
src/spm1d/legacy/: __init__.py  testcases.py
src/spm1d/prob/: __init__.py  fdr.py  gauss.py  (+3 more)
tests/: test_cluster_info.py  test_config_warnings.py  test_interp_kwarg.py  test_rft1d_loc.py
tests/v04-results/: Besier2009muscleforces.pkl  Dorn2012.pkl  Dorn2012manova.pkl  Pataky2014cop.pkl  PlantarArchAngle.pkl  Random.pkl  SPM1D_ANOVA2NESTED_2x2.pkl  SPM1D_ANOVA2NESTED_2x3.pkl  SPM1D_ANOVA2NESTED_3x3.pkl  SPM1D_ANOVA2NESTED_3x4.pkl  SPM1D_ANOVA2NESTED_3x5.pkl  SPM1D_ANOVA2NESTED_4x4.pkl  SPM1D_ANOVA2NESTED_4x5.pkl  SPM1D_ANOVA2ONERM_2x2.pkl  SPM1D_ANOVA2ONERM_2x3.pkl  SPM1D_ANOVA2ONERM_3x3.pkl  SPM1D_ANOVA2ONERM_3x4.pkl  SPM1D_ANOVA2ONERM_3x5.pkl  SPM1D_ANOVA2ONERM_4x4.pkl  SPM1D_ANOVA2ONERM_4x5.pkl  SPM1D_ANOVA2RM_2x2.pkl  SPM1D_ANOVA2RM_2x3.pkl  SPM1D_ANOVA2RM_3x3.pkl  SPM1D_ANOVA2RM_3x4.pkl  SPM1D_ANOVA2RM_3x5.pkl  SPM1D_ANOVA2RM_4x4.pkl  SPM1D_ANOVA2RM_4x5.pkl  SPM1D_ANOVA2_2x2.pkl  SPM1D_ANOVA2_2x3.pkl  SPM1D_ANOVA2_3x3.pkl  SPM1D_ANOVA2_3x4.pkl  SPM1D_ANOVA2_3x5.pkl  SPM1D_ANOVA2_4x4.pkl  SPM1D_ANOVA2_4x5.pkl  SPM1D_ANOVA3NESTED_2x2x2.pkl  SPM1D_ANOVA3NESTED_2x4x2.pkl  SPM1D_ANOVA3ONERM_2x2x2.pkl  SPM1D_ANOVA3ONERM_2x3x4.pkl  SPM1D_ANOVA3RM_2x2x2.pkl  SPM1D_ANOVA3RM_2x3x4.pkl  (+12 more)
(+81 files in other folders)
