[project]
name            = "spm1d_project"
version         = "0.5.0"
description     = "'One-Dimensional Statistical Parametric Mapping"
readme          = "README.md" # Optional
requires-python = ">=3.7"
# license         = "GPL version 3"
# license = {file = "LICENSE.txt"}

keywords        = [
	"statistics",
	"data analysis",
	"probability",
	"hypothesis testing",
	"time series analysis",
	"continuum data analysis"
]

authors         = [
	{name = "Todd Pataky", email = "0todd0@gmail.com" } # Optional
]

classifiers = [
	"Development Status :: 4 - Beta",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Topic :: Scientific/Engineering",
	"Programming Language :: Python :: 3.9",
]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]





[project.urls]  # Optional
"Homepage"    = "https://www.spm1d.org"
"Source"      = "https://github.com/0todd0000/spm1d"
"Bug Reports" = "https://github.com/0todd0000/spm1d/issues"




[tool.setuptools]
package-data  = {"spm1d.data.datafiles" = ["*.py", "*.npz", "*.npy", "*.m", "*.mat", "*.txt"]}




[build-system]
requires      = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
